--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "robofriends",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ale917k.github.io/robofriend-redux/",
+  "homepage": "https://ale917k.github.io/robofriend/",
   "dependencies": {
     "gh-pages": "^3.1.0",
     "react": "^16.14.0",
